--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
-/* Add CSS Styling */
+.paragraph {
+  background-color: rgb(250, 0, 0);
+  font: Verdana, DejaVu Sans, sans-serif;
+}
+
+#n2 {
+  color: blue;
+  font-size: 36px;
+}
+
+#n4 {
+  background-color: rgb(0, 250, 0);
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.fontsize {
+  font-size: 24px;
+}
