--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 4px 8px;
+  align-items: center;
 }
 
 .profile-image {
@@ -44,5 +48,16 @@ a {
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  gap: 16px;
+  padding: 0px;
+  margin: 0px;
 }
+
+.left-links, .right-links {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
