--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -55,6 +58,19 @@ a {
   justify-content: center;
   align-items: center;
   gap: 12px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 16px;
+  background-color: #eeeeee;
+}
+
+.footer .left-links, .right-links {
+  flex-shrink: 0;
+  display: flex;
+  gap: 16px;
 }
 
 
