--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,6 +2,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
@@ -33,3 +36,30 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+.content_container {
+  display: flex;
+  flex-grow: 3;
+}
+
+.container_cards {
+  display: flex; 
+  flex-wrap: wrap;
+  padding: 40px;
+  gap: 20px;
+}
+
+.sidebar {
+  flex-shrink: 0;
+}
+
+.card {
+ flex-basis: 350px; 
+ padding: 10px;
+}
+
