--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -23,6 +23,9 @@ body {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
@@ -56,6 +59,7 @@ ul {
 
 .sidebar {
   flex-shrink: 0;
+  flex-basis: 300px;
 }
 
 .card {
