--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -43,6 +43,7 @@ body {
 ul {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 .content_container {
@@ -53,13 +54,14 @@ ul {
 .container_cards {
   display: flex; 
   flex-wrap: wrap;
-  padding: 40px;
+  padding: 48px;
   gap: 20px;
 }
 
 .sidebar {
   flex-shrink: 0;
   flex-basis: 300px;
+  padding: 16px;
 }
 
 .card {
@@ -67,3 +69,8 @@ ul {
  padding: 10px;
 }
 
+a {
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
